a1/brendan_gordon/TEST_PROGRAMS/invalidtype/adam_carruthers/invalidConditionType.min
var x: float;

x = 1;

if x then
	print "?";
endif

